Bug 52261 - undefined symbol: errno
Summary: undefined symbol: errno
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: SPARC Solaris
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-19 10:54 UTC by Rob.McMahon
Modified: 2012-07-31 16:26 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch for errno.h / nanosleep (1.53 KB, patch)
2012-07-31 15:09 UTC, Rob.McMahon
Details | Splinter Review

Description Rob.McMahon 2012-07-19 10:54:42 UTC
p11-kit-0.13
Solaris 10, cc: Sun C 5.11 SunOS_sparc 2010/08/13

Compilation fails with

make[2]: Entering directory `/home/unit/cu/dcv/src/local/p11-kit-0.13/p11-kit'
  CC     libp11_kit_la-compat.lo
"../common/compat.c", line 140: undefined symbol: errno
"../common/compat.c", line 149: undefined symbol: errno
"../common/compat.c", line 212: undefined symbol: errno
"../common/compat.c", line 220: undefined symbol: errno
cc: acomp failed for ../common/compat.c
make[2]: *** [libp11_kit_la-compat.lo] Error 1
make[2]: Leaving directory `/home/unit/cu/dcv/src/local/p11-kit-0.13/p11-kit'

With this configuration at least, common/compat.h needs to #include <errno.h>
Comment 1 Stef Walter 2012-07-19 11:01:30 UTC
Thanks for the bug report. I don't have a Solaris system at my disposal right now. Could you include a patch which fixes this problem for you?
Comment 2 Rob.McMahon 2012-07-31 15:09:02 UTC
Created attachment 64996 [details] [review]
Patch for errno.h / nanosleep
Comment 3 Rob.McMahon 2012-07-31 15:13:56 UTC
My comment on this seems to have been lost.  This patch fixes the errno problem on my Solaris box, and also a problem with unresolved symbol nanosleep (which lives in -lrt on at least Solaris 8-9).
Comment 4 Stef Walter 2012-07-31 16:26:27 UTC
Wonderful. Thank you. Committed to git master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.