Fix build on solaris

* Conditional inclusion of the errno.h header
 * Link librt when appropriate for nanosleep

https://bugs.freedesktop.org/show_bug.cgi?id=52261